--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -10,7 +10,7 @@ Das Hauptkonzept hinter TensorFlow sind sogenannte Tensoren, welche einen Graphe
 %Diese Tensoren werden während ihrem durch lauf verändert und wieder neu zusammengesetzt. 
 Der Graph selbst stellt damit einen Datenflussgraphen dar, welcher Knoten beinhaltet. 
 Diese Knoten bilden numerische Operationen ab.
-Der Informationsaustausch zwischen den Knoten erfolgt mit multidimensionalen Arrays, den so genannten Tensoren.
+Der Informationsaustausch zwischen den Knoten erfolgt mit multidimensionalen Arrays, den Tensoren.
 TensorFlow bietet wie andere Bibliotheken die Möglichkeit die Berechnungen auf eine Grafikkarte auszulagern.
 Zusätzlich sind weite Routinen eingebaut, damit das Trainieren über mehrere Grafikkarten sowie auf weitere Computer verteilt werden kann. \newline
 
@@ -95,7 +95,7 @@ for step in xrange(0, 10):
 \end{figure}
 Ein TensorFlow Graph kann wie in Abbildung \ref{fig:SimpleFragmentGraphDefinition} ersichtlich, beschrieben werden.
 Dieser wurde zum Beispiel mit der Python API erstellt.
-Die Knoten und Verbindungen ergeben einen Datenfluss, dieser beinhaltet alle erforderlichen Komponenten auch für das per sistieren und aktualisieren der Daten.
+Die Knoten und Verbindungen ergeben einen Datenfluss, dieser beinhaltet alle erforderlichen Komponenten auch für das Persistieren und Aktualisieren der Daten.
 Dies sind Erweiterungen für den Hauptgraphen und beinhalten auch Logik für Schleifenverwaltungen.
 Ein Knoten in einem Graphen besitzt $0$ bis $n$ Ein- und Ausgänge und eine Kernfunktion. 
 Zu den Datenhauptfluss mit den Tensoren gibt es zusätzlich spezielle Verbindungen, welche "control dependencies"  genannt werden. 
@@ -107,7 +107,7 @@ Ein Quellknoten muss die Ausführung abgeschlossen haben bevor der darauf Warten
 Die Operation stellt in jedem Knoten den Kern dar, wie zum Beispiel eine Matrix Multiplikation oder eine Addition.
 In TensorFlow selbst gibt es einen Unterschied zwischen Operation und Kernel.
 Operationen besitzen Attribute, welche spätestens zum Zeitpunkt der Grapherstellung bekannt sein müssen. 
-Ein solches Attribut wäre zum Beispiel, \textit{um eine Operation Polymorph für Datentypen zu ermöglichen}. 
+Ein solches Attribut wäre zum Beispiel, um eine Operation Polymorph für Datentypen zu ermöglichen.  
 Der Kernel hingegen ist die Implementierung der Operation selbst. 
 Dieser kann auf verschiedenen Geräten ausgeführt werden, wie zum Beispiel auf der CPU oder GPU.
 Die Operationen und die dazugehörigen Kernel werden über einen Registrierungsmechanismus zur Verfügung gestellt. 
@@ -133,7 +133,7 @@ Die verwendbaren Typen reichen von Datentypen mit und ohne Vorzeichen, sowie bis
 Hyperparameter werden im Umfeld von maschinellem Lernen verwendet, um Variationen an Kombinationen zu testen. 
 Dabei werden verschiedenste Parameter getestet, wie verschiedene Aktivierungsfunktionen oder Optimierungsalgorithmen, aber auch die Anzahl an Ebenen und Breiten dieser. 
 Im Gesamten führt dies meist zu sehr vielen Permutationen, welche ausgetestet werden müssen und somit voll trainiert werden. 
-Da die Zeit welche dafür benötigt werden würde, nicht in einer Relation dazu steht, werden solche BroudForce Tests nur mehr selten durchgeführt. 
+Da die Zeit welche dafür benötigt werden würde, nicht in einer Relation dazu steht, werden solche Brute-Force Tests nur mehr selten durchgeführt. 
 Für diesen Fall existieren eigene Techniken, welche sich nur um das Optimieren der Hyperparameter kümmern. \cite{bishop2006pattern}
 
 \section{Bibliotheksinhalt}
@@ -156,13 +156,13 @@ In diesem Fall können die Wertebereiche reduziert werden, zum Beispiel auf 32-b
 Diese stellen initialisierte Tensoren für den ersten Trainingsdurchlauf zur Verfügung.
 
 \begin{itemize}
-	\item \textit{tf.zeros} erstellt einen Tensor mit angegebenen Dimension bestehend aus $0$ und von einem Datentypen. 
+	\item \textit{tf.zeros} erstellt einen Tensor mit angegebenen Dimension bestehend aus $0$ und von einem definierten Datentypen. 
 	\item \textit{tf.zeros\_like} gibt einen Tensor zurück, welcher die selbe Dimensionen wie der gegeben besitzt.
 	Alle Werte in diesem Tensor sind auf $0$ gesetzt.
 	In diesem Schritt kann der Datentyp mit angepasst werden, wenn die Dimensionen übernommen werden sollen.
 	\item \textit{tf.ones} agiert genau wie der Tensor \textit{tf.zeros} mit dem Unterschied dass alles mit $1$ gefüllt wird.
 	\item \textit{tf.ones\_like} repräsentiert das Selbe wie \textit{tf.zeros\_like} jedoch mit dem Wert $1$.
-	\item \textit{tf.fill} wird zu der Dimension noch ein Skalar mit gegeben, der für die Werten eingesetzt werden sollen.
+	\item \textit{tf.fill} fügt eine neue Dimension in einen Tensor ein, mit dem gegebenen Skalar, der für die Werten eingesetzt werden sollen.
 	\item \textit{tf.constant} liefert einen Tensor mit selbst definierbaren Werten. 
 	Diese Werte können sowohl eine Liste sein, als auch ein einzelner Wert, welcher beliebig eingefügt werden soll. 
 \end{itemize}
@@ -170,7 +170,7 @@ Diese stellen initialisierte Tensoren für den ersten Trainingsdurchlauf zur Ver
 \paragraph{Sequenzen} können verwendet werden um einen Wertebereich in eine bestimmte Anzahl an Werte zu zerteilen und diese als Tensor in das System wieder einfließen zu lassen.
 
 \begin{itemize}
-	\item \textit{tf.lin\_space} generiert einen eindimensionalen Tensor vom Datentypen $32$ oder $64$-bit Gleitkommazahlen, mit einer bestimmten Folge.
+	\item \textit{tf.lin\_space} generiert einen eindimensionalen Tensor vom Datentypen $32$ oder $64$-bit Gleitkommazahl, mit einer bestimmten Folge.
 	Diese beginnt mit einem Startwert und endet mit dem Endwert. 
 	Die Werte welche innerhalb dieses Bereiches liegen, werden gleichmäßig verteilt. 
 	\item \textit{tf.range} erstellt wie \textit{tf.lin\_space} einen eindimensionalen Tensor mit Skalarwerten. 
@@ -183,7 +183,7 @@ So wird der Startzustand oft mithilfe von Zufallszahlen hergestellt.
 \begin{itemize}
 	\item \textit{tf.random\_normal} liefert einen Tensor mit Zufallswerten anhand einer Normalverteilung (Gaussian). 
 	Die Dimension des Ergebnistensors muss spezifiziert werden, der Median, die Standardabweichung sowie der resultierende Datentyp können angegeben werden. 
-	\item \textit{tf.truncated\_normal} verhält sich gleich zu \textit{tf.random\_normal} mit dem Unterschied, dass bei Werten die größer als $2$-mal die Standardabweichung sind, dieser ignoriert werden und ein neuer Wert ausgewählt wird.
+	\item \textit{tf.truncated\_normal} verhält sich gleich zu \textit{tf.random\_normal} mit dem Unterschied, dass bei Werten die größer als $2$-mal die Standardabweichung sind, dieser ignoriert wird und ein neuer Wert ausgewählt wird.
 	\item \textit{tf.random\_uniform} generiert einen Tensor in welchem Werte gleich Wahrscheinlich vorkommen.
 	Die Werte werden aus dem spezifizierten Wertebereich genommen, wobei diese exklusive der oberen Grenze entsprechen. (siehe Beispiel '$[0, 1)$').
 	\item \textit{tf.random\_shuffle} erstellt eigenständig keine neuen Werte, sondern mischt einen Tensor anhand seiner ersten Dimension durch. 
@@ -213,8 +213,8 @@ Bei diesem Vorgang kann ein Fehler entstehen, welcher in einem \textit{TypeError
 	\item \textit{tf.shape} liefert eine genaue Aufschlüsselung des Tensors mit der Dimension und der Tiefe.
 	\item \textit{tf.size} repräsentiert die Anzahl an Elementen in einem Tensor. 
 	Diese Anzahl ergibst sich aus den konkreten Werten.
-	\item \textit{tf.rank} verhält sich ähnlich zu \textit{tf.size} mit dem Unterschied, dass die Anzahl der Felder Vertiefung gezählt wird.
-	\item \textit{reshape} wird verwendet um Tensoren in eine neue Struktur zu bringen. 
+	\item \textit{tf.rank} verhält sich ähnlich zu \textit{tf.size} mit dem Unterschied, dass die Anzahl der Dimensionen gezählt werden.
+	\item \textit{tf.reshape} wird verwendet um Tensoren in eine neue Struktur zu bringen. 
 	Dabei kann für das einebnen der Dimensionen eine Kurzschreibweise verwendet werden mit $-1$ als Zielausführung der Gestalt.
 	\item \textit{tf.squeeze} entfernt ganze Dimensionen aus dem gegebenen Tensor. 
 	Ohne Achsenangabe werden alle Dimensionen mit der Größe $1$ entfernt oder es werden die spezifizierten Dimensionen herausgenommen.
@@ -246,6 +246,7 @@ Zu diesen Funktionen zählen die Berechnung der Absolutwerten in einem Tensor so
 	\item \textit{tf.eye} erzeugt eine Identitätsmatrix, in welcher alle Werte entlang der Diagonale $1$ sind und alle anderen den Wert $0$ bekommen. 
 \end{itemize}
 
+\noindent
 Zu diesen Funktionen existieren noch weitere Ansätze die zur Lösung von Gleichungen verwendet werden können. 
 Diese Gleichungen müssen in Matrizenschreibweise im Tensor abgebildet sein. 
 
@@ -270,7 +271,7 @@ Für weiter Informationen steht die online Dokumentation zur Verfügung. \footno
 
 \paragraph{Flusskontrollen} sind Operationen die den Ablauf in dem Graphen beeinflussen. 
 Diese können Bedingungen, wie im Sinne von \textit{if (Bedingung)\{...\} else \{...\}} aber auch \textit{switch (Term) \{ case '0': ...; break;\}} Bedingungen sein. 
-In beiden Fällen müssen die Auszuführenden Verzweigungen als Funktionen vorliegen. 
+In beiden Fällen müssen die auszuführenden Verzweigungen als Funktionen vorliegen. 
 Zusätzlich gibt es noch eine \textit{While} und eine \textit{For} Schleife. 
 Zu beachten ist, dass diese Operationen den Fluss durch den Graphen stark beeinträchtigen können.
 
@@ -284,7 +285,8 @@ Diese Operatoren geben wiederum einen Tensor mit Wahrheitswert aus.
 \paragraph{Debugging Operationen} ermöglichen es in den Graphen Kontrollstrukturen einzubauen, welchen auf diverse Bedingungen reagieren.
 So kann Überprüft werden ob ein Tensor Werte mit undefinierten Zustand beinhaltet. 
 Die Funktion \textit{tf.Print} ermöglicht es Tensoren auszugeben, wenn diese als Funktion im Graphen evaluiert wird. 
-Aktuell sind die Möglichkeiten eine Graphen zu debuggen relative eingeschränkt. Grund dafür ist, dass der Grahen , in seiner rohen Darstellung schwer zu verstehen ist. \footnote{Online Dokumentation: Control Flow \url{www.tensorflow.org/api_guides/python/control_flow_ops}}
+Aktuell sind die Möglichkeiten einen Graphen zu debuggen relative eingeschränkt. 
+Grund dafür ist, dass der Graphen, in seiner rohen Darstellung schwer zu verstehen ist. \footnote{Online Dokumentation: Control Flow \url{www.tensorflow.org/api_guides/python/control_flow_ops}}
 
 \subsubsection{Images}
 
@@ -296,7 +298,7 @@ In allen Fällen wird das Bild als Zeichenkette mit Pfad angegeben.
 Für die Größenänderung stehen mehrere Implementierungen mit unterschiedlichen Algorithmen und vorgehen im Hintergrund zur Verfügung.
 
 \paragraph{Beschneiden} wird dann benötigt wenn aus einem Bild ein Teil herausgenommen werden soll. 
-Zum Herausnehmen stehen wiederum mehrere Operationen zur Verfügung, welche mit umschließende Boxen arbeiten oder mit wie viel Prozent von der Mitte des Bildes aus genommen werden soll.
+Zum Herausnehmen stehen wiederum mehrere Operationen zur Verfügung, welche mit umschließende Boxen arbeiten oder wie viel Prozent von der Mitte des Bildes aus genommen werden soll.
 
 \paragraph{Flippen, Rotieren und Transponieren} ermöglicht es Bilder zu verändern, so dass es für einen Menschen mehr oder weniger noch die selbe Bedeutung hat, jedoch nicht mehr für einen Computer. 
 Für diesen stellt ein rotiertes oder gespiegeltes Bild ein neues Bild dar. 
@@ -311,9 +313,10 @@ Zusätzlich gibt es noch die Möglichkeit die Farbkanäle des Bildes zu ändern 
 
 \paragraph{Platzhalter} werden benötigt um einen Graphen zu erstellen. 
 Ohne Platzhalter können keine Daten in den Graphen hinein geladen werden. 
-Diese müssen zur Ausführungszeit durch echte Daten ersetzt werden.Dies erfolgt mit Hilfe eines Schlüssen-Wert-Paars. 
+Diese müssen zur Ausführungszeit durch echte Daten ersetzt werden. 
+Dies erfolgt mit Hilfe eines Schlüssen-Wert-Paars in der Run-Methode der Session. 
 
-\paragraph{Readers} ermöglichen aus dem Dateisystem Daten direkt zu laden. 
+\paragraph{Readers} ermöglichen es, aus dem Dateisystem Daten direkt zu laden. 
 Dabei stehen spezifizierte Reader zur Verfügung, welche Tensoren direkt ausliefern, sowie Zeile für Zeile  oder ganze Dateiinhalte liefern. 
 
 \paragraph{Konvertierungsoperationen} ermöglichen es Dateien die mit TensorFlow Readers gelesen wurden weiter zu verarbeiten, so kann zum Beispiel eine CSV Datei decodiert verwendet werden.
@@ -413,7 +416,7 @@ Diese Art der Verlustfeststellung wird bei Regressionsprobleme benötigt, sie ha
 	Im Falle dieser Implementierung wird keine Wurzel des Quadrats berechnet, sondern es werden die Werte nur addiert und durch $2$ dividiert.
 	\item \textit{tf.nn.log\_poisson\_loss} berechnet den Logarithmischen-Wahrscheinlichkeitsverlust zwischen dem Ergebnis und einem erwarteten Ergebnis. 
 	Diese Methode liefert im Normalfall nicht den exakten Verlust, stellt jedoch für Optimierungen nicht das Problem dar. 
-	Sollte trotzdem ein genauerer Wert zum Vergleichen von Verlusten berechnet werden, muss die aufwändige Stirling Approximation aktiviert werden. 
+	Sollte trotzdem ein genauerer Wert zum Vergleichen von Verlusten berechnet werden, muss die aufwändige Stirling Approximation \textbf{TODO: REF | CITE} aktiviert werden. 
 \end{itemize}
 
 \paragraph{Klassifizierungen} repräsentieren einen großen Bereich des maschinellen Lernens. 
@@ -438,7 +441,7 @@ Des Weiteren gibt es Implementierungen für Wiederkehrende Neuronale Netzwerke u
 
 \subsubsection{Running Graphs}
 
-\paragraph{Session} stellt eine Hauptklasse des TensorFlow-Systems dar, mit der TensorFlow Engine im Hintergrund.
+\paragraph{Session} stelimplementiertlt eine Hauptklasse des TensorFlow-Systems dar, mit der TensorFlow Engine im Hintergrund.
 In ihr werden alle Operationen ausgeführt und alle Tensoren evaluiert. 
 Dieser Session wird der Graphen mitgegeben, in dem der Endpunkt des Graphen angeben wird. 
 Zur Ausführungszeit führt die Engine alle Operationen des Graphen durch und evaluiert die Tensoren in diesem. 
@@ -465,14 +468,14 @@ In diesem wird der Gradient berechnet und dieser wird direkt auf die Variablen a
 Diese Schritte können in einzelne zerlegt werden wenn, sollte mit den berechneten Gradient noch etwas zusätzlich durchgeführt werden. 
 Die Berechnung wird dabei mit \textit{opt.compute\_gradients} ausgelöst, was einen Liste mit Paaren liefert. 
 Diese Liste kann bearbeitet werden aber auch zu Testzwecken mit Protokolliert werden. 
-Die Gradienten werden in dritten Schritt mit \textit{opt.apply\_gradients} auf die Variablen angewendet. 
+Die Gradienten werden im dritten Schritt mit \textit{opt.apply\_gradients} auf die Variablen angewendet. 
 Jeder Optimierungsalgorithmen verfügt über Eigenheiten und spezielle Verhalten, welche berücksichtigt werden sollten bei der Auswahl des Optimierers.
 
 \paragraph{Gradient Computation} umfasst Methoden die das Verhalten des Graphen und der Optimierung beeinflussen. 
 Diese Methoden ermöglichen es, Einfluss auf die Gradientenberechnung sowie auf dessen Evaluierung zunehmen. 
 In diesem Sinne sind diese mit Vorsicht zu verwenden.
 
-\paragraph{Verteilte Ausführung} stellt eine der Stärken von TensorFlow dar, da diese Technologie schon im System implementiert ist und somit keine manuelle Verteilung der Aufgaben entwickelt werden muss.
+\paragraph{Verteilte Ausführung} stellt eine der Stärken von TensorFlow dar, da diese Technologie schon im System integriert ist und somit keine manuelle Verteilung der Aufgaben entwickelt werden muss.
 Dadurch besteht die Option die Berechnungen auf mehrere Geräte zu verteilen und so die zur Verfügung stehenden Ressourcen besser auszunützen. \\
 %Im Grunde wird ein Cluster definiert welcher Computerknoten umfasst. 
 %Diesen werden dann Tasks auf Aufgaben zugewiesen, wobei zu den Knoten definiert werden muss was zu tun ist.
@@ -482,13 +485,14 @@ Einige Komfortmethoden ermöglichen es einfacher eine Session zu erstellen und a
 In diesem Zuge können Hooks einfach in das System integriert werden welche Aufgerufen werden.
 
 \noindent
-Im Weiteren kann Threading sowie der Verfall der Lernrate beeinflusst werden.
-\footnote{Online Dokumentation: Training \url{www.tensorflow.org/api_guides/python/train}}
+Im Weiteren kann Threading sowie der Verfall der Lernrate beeinflusst werden. \footnote{Online Dokumentation: Training \url{www.tensorflow.org/api_guides/python/train}}
+\phantom \newline
 
 %\subsection{Probleme}
 
 %\subsubsection{NaN Problem}
 
+\noindent
 TensorFlow beinhaltet noch sehr viele weiter Komponenten und Möglichkeiten. 
 Dies würde aber den Rahmen und den ersten Einblick in die Materie des maschinellen Lernens und im speziellen von TensorFlow sprengen. 
 Im Grunde kann mit diesem Grundlagen und ein Netzwerk erstellt werden und damit gearbeitet werden. 
@@ -500,16 +504,16 @@ Dies hat zur Folge, dass schneller ein verwendbarer Graphen vorhanden ist, diese
 \subsection{TensorBoard}
 
 TensorBoard stellt eine Erweiterung des TensorFlow-System dar, im Sinne einer Toolerweiterung. 
-Jeder Graph kann in ein File Serialisiert werden, welches als Event-File bezeichnet wird. 
+Jeder Graph kann in ein File serialisiert werden, welches als Event-File bezeichnet wird. 
 Dies hat zur Folge, dass dieser auch wieder geladen werden kann. 
 Bei dieser Serialisierung werden alle Informationen des Graphen inklusive der Gewichtungen in die definierte Datei gespeichert.
 TensorBoard bietet nun die Möglichkeit diesen Graphen zu laden und diesen Visualisiert darzustellen.
 Zu den Graph-Informationen kann jeder Tensor mit gespeichert werden und als Diagramm visualisiert werden, mit einer zeitlichen Komponente. 
 Dies ermöglicht es einem den Verlauf des Trainings zu analysieren. 
 Aus einem Graphen können mehrere dieser Event-Files erzeugt werden sowie fixe Punkte definiert werden. 
-Beim Laden eines Graphen in die TensorFlowt sowie TensorBoard-Umgebung kann spezifiziert werden zu welchen Zeitpunkt geladen werden soll. 
+Beim Laden eines Graphen in die TensorFlow sowie TensorBoard-Umgebung kann spezifiziert werden zu welchen Zeitpunkt geladen werden soll. 
 Damit wird ermöglicht viele Trainingsdurchläufe zu durchlaufen und bei einer Verschlechterung der Präzision zu einem früheren Zustand zurück zu springen.
-Diese Tool ermöglichte es einem in das Verhalten eines Graphen ein wenig Einsicht zu nehmen und so die sogenannte Black Box zu durchleuchten. 
+Dieses Tool ermöglicht es einem in das Verhalten eines Graphen ein wenig Einsicht zu nehmen und so die sogenannte Black Box zu durchleuchten. 
 
 \paragraph{Namesbereiche (\textit{tf.name\_scope})} stellen eine Hilfe für die Darstellung und die Lesbarkeit des visualisierten Graphen dar. 
 Durch die Verwendung des Python-Schlüsselwortes \textit{with} wird eine Ressource verwaltet und wieder freigegeben. 
@@ -539,29 +543,29 @@ for step in xrange(0, 10):
 	\caption{TensorFlow Codefragment zur Namescope Verwendung in Graphen}
 	\label{fig:NameScopeFragmentGraphDefinition}
 \end{figure}
-Wie in der Codefragment \ref{fig:NameScopeFragmentGraphDefinition} beschrieben werden die Tensoren und Operatoren \textit{b, W, x, relu} in einen Block zusammen gefasst. 
-In diesem Beispiel gibt es keinen Tensor, welcher in den Block übergeben wird, da die Daten in der Ausführung von außerhalb es System in dieses gelangen. 
+Wie im Codefragment \ref{fig:NameScopeFragmentGraphDefinition} beschrieben werden die Tensoren und Operatoren \textit{b, W, x, relu} in einen Block zusammen gefasst. 
+In diesem Beispiel gibt es keinen Tensor, welcher in den Block übergeben wird, da die Daten in der Ausführung von außerhalb des System in dieses gelangen. 
 Die Operation \textit{relu} und der daraus resultierende Tensor bilden den Ausgang des Blockes. 
 Diese Technik der Namensbereiche ermöglicht es einem den Graphen zu strukturiere, da nicht wie in \textit{tf.zeros([100])} viele einzelne Knoten dargestellt werden, sonder abstrahiert werden und aber weiterhin einsehbar sind.
 
 \paragraph{Graph} bildet den Punkt zum Visualisieren des Graphen selbst. 
 Hierbei werden aus dem Event-File alle Informationen zum Aufbau des Graphen geladen und visualisiert. 
-Durch die Verwendung der Namensbereichen werden Gruppen gebildet was dazuführt, dass die Gruppierungen möglicherweise in Ebenen sich widerspiegeln. 
-Der dargestellte Graphen kann nach dem Einlesen und generieren interaktive Analysiert werden. 
+Durch die Verwendung der Namensbereichen werden Gruppen gebildet was dazuführt, dass die Gruppierungen sich möglicherweise in Ebenen widerspiegeln. 
+Der dargestellte Graphen kann nach dem Einlesen und Generieren interaktive analysiert werden. 
 So können Bereiche vergrößert und geöffnet werden und die definierten Tensoren betrachtet werden. 
-Dieses Tool bietet zusätzliche Funktionalitäten, wie das das Darstellen wo am meisten Rechenzeit benötigt wurde sowie auch welche Berechnung auf welchem Gerät ausgeführt worden ist. 
+Dieses Tool bietet zusätzliche Funktionalitäten, wie das Darstellen wo am meisten Rechenzeit benötigt wurde sowie auch welche Berechnung auf welchem Gerät ausgeführt worden sind. 
 Alle diese zusätzlichen Funktionalitäten benötigen Daten, welchen beim Erstellen des Graphen mit definiert werden müssen und auch mit in des Event-File serialisiert werden müssen. 
 
 \paragraph{Scalars} repräsentiert den Bereich, in welchem die Lernergebnisse dargestellt werden können. 
 Dies umfasst die Präzision sowie die Verluste. 
 Das Ziel des Graphen ist im Grunde immer die Präzision zu erhöhen und die Verluste zu minimieren. 
 Aus diesem Grund sollte sich die Genauigkeit an $1$ annähern, außer die Definition dieser Berechnung liefert andere Werte oder besitzt einen anderen Grenzwert. 
-Der Verlust sollte sich im laufe des Trainings an $0$ annähern, denn dadurch spiegelt sich die Fehlerquote ab. 
+Der Verlust sollte sich im laufe des Trainings an $0$ annähern, denn dadurch spiegelt sich die Fehlerquote wieder. 
 Dies hängt aber wieder von dem entwickelten Graphen ab und kann sich somit einem anderen Wert annähern.
-\phantom \newline 
+\phantom \newline
 
 \noindent
-Event bietet die Möglichkeit mehrere Graphen und ihre Eventdaten zu visualisieren. 
+TensorBoard bietet die Möglichkeit mehrere Graphen und ihre Eventdaten zu visualisieren. 
 In diesem Fall werden alle gelesen Events in einer Liste aufgelistet, in welcher ausgewählt werden kann welche Ausführung in den Diagrammen dargestellt werden sollen. 
 In diesem Zuge können diese Diagramme zusammen geführt werden und so die Ergebnisse direkt verglichen werden. 
 Dies hat den Vorteil, dass ein Netzwerk mit Hyperparameter automatisch getestet werden kann und jede Kombination ein eigenes Event-File erzeugt. 
@@ -570,13 +574,13 @@ Solche Testdurchläufe benötigen mehr Zeit, abhängig von den definierten Kombi
 
 \noindent
 Die Informationen für die Lernrate sowie des Verlustes werden in diesem Fall am besten Festgehalten. 
-Dies wird ermöglicht indem die Tensoren, welche die Lernrate sowie den Verlust beinhalten, in die Methode \textit{tf.summary.scalar} jeweils gefüttert wird. 
+Dies wird ermöglicht indem die Tensoren, welche die Lernrate sowie den Verlust beinhalten, in die Methode \textit{tf.summary.scalar} jeweils gefüttert werden. 
 Bei jedem Schreibzyklus in das Event-File werden diese Informationen dann mit übernommen und stehen dann in TensorBoard zur Verfügung.
 
 \paragraph{Distributions} stellt eine weiter Funktionalität von TensorBoard dar.  %\url{https://duckduckgo.com/?q=tensorboard+histogram&ia=qa}
 Diese Funktionalität war in den Versionen von 'r1.0' noch unter dem Punkt Histogramm. 
 Im Allgemeinen werden Tensoren mit der Methode \textit{tf.summary.histogram} wieder das Event-File serialisiert. 
-Das Ergebnis stellt einen Verteilung dar für die Werte die Tensor vorkommen. 
+Das Ergebnis stellt eine Verteilung dar für die Werte die im Tensor vorkommen. 
 Dabei werden alle Werte auf eine Gaussian Glockenkurve projiziert. 
 Das Diagramm repräsentiert auf der X-Achse die Anzahl der Schritte, die durchgeführt worden sind. 
 Die Y-Achse gibt die konkreten Werte wieder, welche sich in dem Tensor über die Zeit befinden. 
@@ -588,7 +592,7 @@ Die Y-Achse gibt die konkreten Werte wieder, welche sich in dem Tensor über die
 \end{figure}
 Im Diagramm \ref{fig:Verteilungsdiagram} wird ein Tensor mit 100 Werten dargestellt. 
 Dieser Tensor wurde mit einer Normalverteilung initialisiert, wobei die Standartabweichung bei $0.5$ liegt und der Median zu Beginn bei $0.2$ liegt, mit einer geringen Abweichung. 
-Die Linien in diesem Diagramm \ref{fig:Verteilungsdiagram} und ihre Einfärbungen präsentieren die Verteilung der Werte im beobachteten Tensor. 
+Die Linien in diesem Diagramm und ihre Einfärbungen präsentieren die Verteilung der Werte im beobachteten Tensor. 
 Die Verteilung muss von unten Nach oben gelesen werden, dabei ergibt die unterste Linie den minimal Wert der vorgekommen ist. 
 Die nächste Linie besagt, dass 7\% der Werte in dem Bereich zwischen dem geringsten und der zweiten Linie sich befinden, was inklusive des geringsten Wertes ist.  
 Der nächste Bereich definiert, wie in einer Normalverteilung, dass bis zu Ende dieses Bereiches 16\% darin befinden. 
@@ -646,22 +650,22 @@ Im Grunde präsentiert diese Ansicht diese Daten nur auf eine andere Art und Wei
 \end{figure}
 Wie auch in der anderen Darstellung werden die Schritte, direkt auf einer Achse dargestellt. 
 Im Falle des Histogramm \ref{fig:Histogram} ist dies die Achse, welche sich Dreidimensional aus dem Hintergrund des Bildes in den Vordergrund zieht. 
-Die horizontalen Achsen welche zu jedem Schritt gezeichnet werden immer auf die vorderste Achse projiziert. 
+Die horizontalen Achsen welche zu jedem Schritt gezeichnet werden, projizieren ihre Wertebereiche immer auf die vorderste Achse. 
 Auf dieser wird der Wertebereich abgebildet, in welchem sich die Werte im Tensor befinden. 
 Die Erhebungen und die sich darunter bildenden Flächen geben die Verteilung der Werte wieder. 
 So wird beim überfahren eines Schrittes mit der Maus dieser aktiviert, wie im Histogramm \ref{fig:Histogram} ersichtlich ist. 
-In Falle dieses Diagramms und dieser Stelle bedeutet dies, dass sich in der Nähe des Wertes $3.00$ ungefähr $12.2$ Einträge im Tensor befinden. 
-Anders ausgedrückt haben $12.2$ konkrete Werte im Tensor den Wert $3.00$. 
+Im Falle dieses Diagramms und dieser Stelle bedeutet dies, dass sich in der Nähe des Wertes $3.00$ ungefähr $12.2$ Einträge im Tensor befinden. 
+Anders ausgedrückt haben $12.2$ konkrete Werte im Tensor den Wert $3.00$, oder einen naheliegenden. 
 Durch die Verteilung der Werte entsteht nun der Fall, das ein Teil der Einträge zu einem Wertebereich vorher oder nachher auch gehören können. 
 Dieses Diagramm stellt die Verteilung in Wertebereiche dar, wobei alle vertikalen Werte in einem Schritt die Anzahl der Werte im Tensor ergeben müssen. 
 Im Falle dieses Beispieles ergeben diese aufsummiert einen Wert von $100.044$, was gerundet die $100$ Einträge im Tensor bestätigt. 
-Die Aufteilung der Werte in Wertebereiche mit teil Zuweisungen, erklärt auch den Schrittverlauf im Histogramm \ref{fig:Histogram}. 
+Die Aufteilung der Werte in Wertebereiche mit Teilzuweisungen, erklärt auch den Schrittverlauf im Histogramm \ref{fig:Histogram}. 
 Hier ist ersichtlich, dass sich die Verteilungen und Zugehörigkeiten immer ein wenig sich ändern, obwohl in diesem Beispiel in jedem Schritt konstant $0.2$ zu jedem Wert hinzu addiert worden ist. 
 Dies lässt sich bei einer geringen Anzahl an Werten wie hier mit $100$ leichter beobachten, als bei einer sehr viel höheren. 
 \phantom \newline
 
 \noindent
-Tensorboard bietet noch weiter Möglichkeiten, wie Bilder- oder Soundinhalte mit in das Event-File zu geben, um diese dann in Tensorboard weiter zu verwenden. 
+TensorBoard bietet noch weiter Möglichkeiten, wie Bilder- oder Soundinhalte mit in das Event-File zu geben, um diese dann in Tensorboard weiter zu verwenden. 
 So können diese Inhalte durch den Graphen gesendet werden und dabei beobachtet werden. 
 Die letzte Erweiterung in Tensorboard ist der Punkt mit 'Emeddings', wo gelernte Informationen, so wie sie vom Graphen gruppiert worden sind, dargestellt werden können. \footnote{Online Dokumentation: Emeddings \url{www.tensorflow.org/get_started/embedding_viz}}
 \phantom \newline
